# datasketches-cpp

./: .asf.yaml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  DISCLAIMER  DISCLAIMER-WIP  Dockerfile  Doxyfile  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  build_wheels.sh  common.mk  config.mk  pyproject.toml  setup.py  version.cfg.in
benchmarks/: CMakeLists.txt  benchmark_count_min_sketch.cpp  benchmark_count_min_sketch_serialization.cpp
common/: CMakeLists.txt  Makefile  common.mk
common/include/: CommonUtil.hpp  MurmurHash3.h  binomial_bounds.hpp  bounds_binomial_proportions.hpp  common_defs.hpp  conditional_back_inserter.hpp  conditional_forward.hpp  fast_log2.hpp  kolmogorov_smirnov_impl.hpp  memory_operations.hpp  optional.hpp  quantile_calculator.hpp  quantile_calculator_impl.hpp  quantile_sketch_sorted_view.hpp  quantile_sketch_sorted_view_impl.hpp  quantiles_sorted_view.hpp  quantiles_sorted_view_impl.hpp  serde.hpp  version.hpp.in
common/src/: murmur3.cpp
common/test/: A.hpp  CMakeLists.txt  binomial_bounds_test.cpp  deserialize_hardening_test.cpp  optional_test.cpp  quantile_sketch_sorted_view_test.cpp  quantiles_sorted_view_test.cpp  test_allocator.cpp  test_allocator.hpp  test_fast_log2.cpp  test_runner.cpp  test_type.hpp
cpc/: CMakeLists.txt  Makefile  cpc.mk
cpc/include/: common.h  compressionData.h  counter_of_zeros.hpp  cpc_common.hpp  cpc_compressor.hpp  cpc_compressor_impl.hpp  cpc_sketch.hpp  cpc_sketch_impl.hpp  cpc_union.hpp  cpc_union_impl.hpp  cpc_util.hpp  fm85.h  fm85Compression.h  fm85Confidence.h  fm85Merging.h  fm85Util.h  iconEstimator.h  icon_estimator.hpp  u32Table.h  u32_table.hpp  u32_table_impl.hpp
cpc/src/: compressionData.data  cpc_sketch.cpp  fm85.c  fm85.cpp  fm85Compression.c  fm85Compression.cpp  fm85Confidence.cpp  fm85Merging.c  fm85Merging.cpp  fm85Util.c  fm85Util.cpp  iconEstimator.cpp  u32Table.c  u32Table.cpp
cpc/test/: CMakeLists.txt  compression_test.cpp  cpc_sketch_allocation_test.cpp  cpc_sketch_deserialize_from_java_test.cpp  cpc_sketch_test.cpp  cpc_union_test.cpp
ddsketch/: CMakeLists.txt
ddsketch/include/: bin.hpp  bin_impl.hpp  collapsing_dense_store.hpp  collapsing_dense_store_impl.hpp  collapsing_highest_dense_store.hpp  collapsing_highest_dense_store_impl.hpp  collapsing_lowest_dense_store.hpp  collapsing_lowest_dense_store_impl.hpp  ddsketch.hpp  ddsketch_impl.hpp  dense_store.hpp  dense_store_impl.hpp  index_mapping.hpp  index_mapping_decode.hpp  index_mapping_factory.hpp  index_mapping_impl.hpp  linearly_interpolated_mapping.hpp  linearly_interpolated_mapping_impl.hpp  log_like_index_mapping.hpp  log_like_index_mapping_impl.hpp  logarithmic_mapping.hpp  logarithmic_mapping_impl.hpp  quadratically_interpolated_mapping.hpp  quadratically_interpolated_mapping_impl.hpp  quartically_interpolated_mapping.hpp  quartically_interpolated_mapping_impl.hpp  sparse_store.hpp  sparse_store_impl.hpp  store.hpp  store_factory.hpp  unbounded_size_dense_store.hpp  unbounded_size_dense_store_impl.hpp
ddsketch/test/: BinTest.cpp  CMakeLists.txt  DDSketchTest.cpp  IndexMappingTest.cpp  StoreTest.cpp  collapsing_highest_dense_store_test.cpp
fi/: CMakeLists.txt  fi.mk
fi/include/: frequent_items_sketch.hpp  frequent_items_sketch_impl.hpp  reverse_purge_hash_map.hpp  reverse_purge_hash_map_impl.hpp
fi/test/: CMakeLists.txt  frequent_items_sketch_custom_type_test.cpp  frequent_items_sketch_deserialize_from_java_test.cpp  frequent_items_sketch_serialize_for_java.cpp  frequent_items_sketch_test.cpp  reverse_purge_hash_map_test.cpp
filters/test/: CMakeLists.txt  bit_array_ops_test.cpp  bit_array_test.cpp  bloom_filter_allocation_test.cpp  bloom_filter_deserialize_from_java_test.cpp  bloom_filter_serialize_for_java.cpp  bloom_filter_test.cpp  quotient_filter_test.cpp
hll/: CMakeLists.txt  Makefile  hll.mk
hll/include/: AuxHashMap-internal.hpp  AuxHashMap.hpp  CompositeInterpolationXTable-internal.hpp  CompositeInterpolationXTable.hpp  Conversions-internal.hpp  Conversions.hpp  CouponHashSet-internal.hpp  CouponHashSet.hpp  CouponList-internal.hpp  CouponList.hpp  CubicInterpolation-internal.hpp  CubicInterpolation.hpp  HarmonicNumbers-internal.hpp  HarmonicNumbers.hpp  Hll4Array-internal.hpp  Hll4Array.hpp  Hll6Array-internal.hpp  Hll6Array.hpp  Hll8Array-internal.hpp  Hll8Array.hpp  HllArray-internal.hpp  HllArray.hpp  HllPairIterator-internal.hpp  HllPairIterator.hpp  HllSketch-internal.hpp  HllSketch.hpp  HllSketchImpl-internal.hpp  HllSketchImpl.hpp  HllSketchImplFactory.hpp  HllUnion-internal.hpp  HllUnion.hpp  HllUtil.hpp  IntArrayPairIterator-internal.hpp  IntArrayPairIterator.hpp  PairIterator.hpp  RelativeErrorTables-internal.hpp  RelativeErrorTables.hpp  coupon_iterator-internal.hpp  coupon_iterator.hpp  hll.hpp  (+1 more)
hll/src/: AuxHashMap.cpp  CompositeInterpolationXTable.cpp  Conversions.cpp  CouponHashSet.cpp  CouponList.cpp  CubicInterpolation.cpp  HarmonicNumbers.cpp  Hll4Array.cpp  Hll6Array.cpp  Hll8Array.cpp  HllArray.cpp  HllPairIterator.cpp  HllSketch.cpp  HllSketchImpl.cpp  HllUnion.cpp  HllUtil.cpp  IntArrayPairIterator.cpp  RelativeErrorTables.cpp
hll/test/: AuxHashMapTest.cpp  CMakeLists.txt  CouponHashSetTest.cpp  CouponListTest.cpp  CrossCountingTest.cpp  HllArrayTest.cpp  HllSketchTest.cpp  HllUnionTest.cpp  IsomorphicTest.cpp  TablesTest.cpp  ToFromByteArray.cpp  ToFromByteArrayTest.cpp  UnionCaseTest.cpp  hll_sketch_deserialize_from_java_test.cpp  hll_sketch_test.cpp
kll/: CMakeLists.txt  Makefile  kll.mk
kll/include/: kll_helper.hpp  kll_helper_impl.hpp  kll_quantile_calculator.hpp  kll_sketch.hpp  (+4 more)
python/: CMakeLists.txt  README.md  pybind11Path.cmd
sampling/: CMakeLists.txt
src/: CMakeLists.txt  MurmurHash3.h  kll_helper.cpp  kll_helper.hpp  kll_quantile_calculator.cpp  kll_quantile_calculator.hpp  kll_sketch.cpp  kll_sketch.hpp
test/: CMakeLists.txt  kll_sketch_test.cpp  kll_sketch_validation.cpp  test_runner.cpp
theta/: CMakeLists.txt  theta.mk
tuple/: CMakeLists.txt
(+1264 files in other folders)
