[build-system]
requires = ["wheel",
            "setuptools >= 30.3.0",
            "setuptools_scm",
            "cmake >= 3.12",
            "pybind11[global] >= 2.6.0"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3

[testenv]
deps = pytest
       numpy
       pybind11[global] >= 2.6.0
changedir = python/tests
commands = pytest
"""